Add program argument parser

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,18 +12,24 @@ FetchContent_MakeAvailable(json)
 include(CMakeRC.cmake)
 cmrc_add_resource_library(SolanaVerifierAssets assets/solana.c)
 
+find_package(Boost 1.83 COMPONENTS program_options REQUIRED)
+include_directories(${Boost_INCLUDE_DIRS})
+
 add_executable(SolanaVerifier main.cpp solana_contract.cpp mir_contract.cpp solana_contract.h mir_contract.h
         mir_statement.cpp
         mir_statement.h
         utils.cpp
         utils.h
         c_program.cpp
-        c_program.h)
+        c_program.h
+        controller.cpp
+        controller.h)
 
 target_link_libraries(SolanaVerifier
         PRIVATE tomlplusplus::tomlplusplus
         PRIVATE nlohmann_json::nlohmann_json
         PRIVATE SolanaVerifierAssets
+        PRIVATE ${Boost_LIBRARIES}
 )
 
 target_include_directories(SolanaVerifier
