Add std::vec::Vec support

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -118,6 +118,7 @@ add_executable(SolanaVerifier
         mir-values/values/bitand_mir_value.h
         mir-values/values/bitor_mir_value.h
         mir-values/values/bitxor_mir_value.h
+        mir-types/types/vec_mir_type.h
 )
 
 target_link_libraries(SolanaVerifier
