Add solana instruction support

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -120,6 +120,7 @@ add_executable(SolanaVerifier
         mir-values/values/bitxor_mir_value.h
         mir-types/types/vec_mir_type.h
         mir-types/types/account_meta_mir_type.h
+        mir-types/types/solana_instruction_mir_type.h
 )
 
 target_link_libraries(SolanaVerifier
