--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -121,6 +121,7 @@ add_executable(SolanaVerifier
         mir-types/types/vec_mir_type.h
         mir-types/types/account_meta_mir_type.h
         mir-types/types/solana_instruction_mir_type.h
+        mir-types/types/deref_mir_type.h
 )
 
 target_link_libraries(SolanaVerifier
