Add box type support

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -122,6 +122,7 @@ add_executable(SolanaVerifier
         mir-types/types/account_meta_mir_type.h
         mir-types/types/solana_instruction_mir_type.h
         mir-types/types/deref_mir_type.h
+        mir-types/types/box_mir_type.h
 )
 
 target_link_libraries(SolanaVerifier
