--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -126,6 +126,8 @@ add_executable(SolanaVerifier
         mir-types/types/const_mir_type.h
         mir-values/values/solana_instruction_mir_value.h
         mir-values/values/init_array_mir_value.h
+        mir-types/types/panic_assert_kind_mir_type.h
+        mir-values/values/panic_assert_kind_mir_value.h
 )
 
 target_link_libraries(SolanaVerifier
