Add arguments support

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -132,6 +132,7 @@ add_executable(SolanaVerifier
         mir-values/values/promoted_mir_value.h
         mir-types/types/optional_mir_type.h
         mir-values/values/none_optional_mir_value.h
+        mir-types/types/arguments_mir_type.h
 )
 
 target_link_libraries(SolanaVerifier
