Add floating point number support

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -134,6 +134,7 @@ add_executable(SolanaVerifier
         mir-values/values/none_optional_mir_value.h
         mir-types/types/arguments_mir_type.h
         mir-values/values/assert_failed_mir_value.h
+        mir-types/types/float_mir_type.h
 )
 
 target_link_libraries(SolanaVerifier
