--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -138,6 +138,7 @@ add_executable(SolanaVerifier
         mir-values/values/conversion_mir_value.h
         mir-types/types/rent_mir_type.h
         mir-values/values/result_unwrap_mir_value.h
+        mir-values/values/enum_mir_value.h
 )
 
 target_link_libraries(SolanaVerifier
