Add as box support

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -140,6 +140,7 @@ add_executable(SolanaVerifier
         mir-values/values/result_unwrap_mir_value.h
         mir-values/values/enum_mir_value.h
         mir-values/values/box_indexer_mir_value.h
+        mir-values/values/as_box_mir_value.h
 )
 
 target_link_libraries(SolanaVerifier
