Add init account meta support

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -142,6 +142,8 @@ add_executable(SolanaVerifier
         mir-values/values/box_indexer_mir_value.h
         mir-values/values/as_box_mir_value.h
         mir-values/values/into_vec_mir_value.h
+        mir-values/values/init_account_meta_readonly_mir_value.h
+        mir-values/values/init_account_meta_mir_value.h
 )
 
 target_link_libraries(SolanaVerifier
