--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -146,6 +146,7 @@ add_executable(SolanaVerifier
         mir-values/values/init_account_meta_mir_value.h
         mir-values/values/invoke_mir_value.h
         mir-values/values/system_program_id_mir_value.h
+        mir-values/values/const_bool_mir_value.h
 )
 
 target_link_libraries(SolanaVerifier
