Add sizeof, alignof & exchange malloc support

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -148,6 +148,9 @@ add_executable(SolanaVerifier
         mir-values/values/system_program_id_mir_value.h
         mir-values/values/const_bool_mir_value.h
         mir-values/values/shallow_init_box_mir_value.h
+        mir-values/values/size_of_mir_value.h
+        mir-values/values/align_of_mir_value.h
+        mir-values/values/exchange_malloc_mir_value.h
 )
 
 target_link_libraries(SolanaVerifier
