Add find program address support

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -152,6 +152,7 @@ add_executable(SolanaVerifier
         mir-values/values/align_of_mir_value.h
         mir-values/values/exchange_malloc_mir_value.h
         mir-values/values/sysvar_rent_id_mir_value.h
+        mir-values/values/find_program_address_mir_value.h
 )
 
 target_link_libraries(SolanaVerifier
