Add string to bytes support

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -153,6 +153,7 @@ add_executable(SolanaVerifier
         mir-values/values/exchange_malloc_mir_value.h
         mir-values/values/sysvar_rent_id_mir_value.h
         mir-values/values/find_program_address_mir_value.h
+        mir-values/values/str_as_bytes_mir_value.h
 )
 
 target_link_libraries(SolanaVerifier
