Add panic support

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -155,6 +155,7 @@ add_executable(SolanaVerifier
         mir-values/values/find_program_address_mir_value.h
         mir-values/values/str_as_bytes_mir_value.h
         mir-values/values/pubkey_as_bytes_mir_value.h
+        mir-values/values/panic_mir_value.h
 )
 
 target_link_libraries(SolanaVerifier
