Add create account support

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -159,6 +159,7 @@ add_executable(SolanaVerifier
         mir-values/values/clone_mir_value.h
         mir-values/values/transfer_mir_value.h
         mir-values/values/init_struct_mir_value.h
+        mir-values/values/create_account_mir_value.h
 )
 
 target_link_libraries(SolanaVerifier
