--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -162,6 +162,7 @@ add_executable(SolanaVerifier
         mir-values/values/create_account_mir_value.h
         mir-values/values/minimum_balance_mir_value.h
         mir-values/values/data_is_empty_mir_value.h
+        mir-values/values/rent_from_account_info_mir_value.h
 )
 
 target_link_libraries(SolanaVerifier
