Add len support

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -168,6 +168,7 @@ add_executable(SolanaVerifier
         mir-values/values/into_iter_mir_value.h
         mir-values/values/as_some_mir_value.h
         mir-values/values/create_program_address_mir_value.h
+        mir-values/values/len_mir_value.h
 )
 
 target_link_libraries(SolanaVerifier
