Add array indexer support

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -169,6 +169,7 @@ add_executable(SolanaVerifier
         mir-values/values/as_some_mir_value.h
         mir-values/values/create_program_address_mir_value.h
         mir-values/values/len_mir_value.h
+        mir-values/values/array_indexer_mir_value.h
 )
 
 target_link_libraries(SolanaVerifier
