Support ok conversion value

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -171,6 +171,7 @@ add_executable(SolanaVerifier
         mir-values/values/len_mir_value.h
         mir-values/values/array_indexer_mir_value.h
         mir-types/types/struct_mir_type.h
+        mir-values/values/as_ok_mir_value.h
 )
 
 target_link_libraries(SolanaVerifier
