--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -173,6 +173,7 @@ add_executable(SolanaVerifier
         mir-types/types/struct_mir_type.h
         mir-values/values/as_ok_mir_value.h
         mir-values/values/rent_get_mir_value.h
+        mir-values/values/lamports_mir_value.h
 )
 
 target_link_libraries(SolanaVerifier
