Support account info assign

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -175,6 +175,7 @@ add_executable(SolanaVerifier
         mir-values/values/rent_get_mir_value.h
         mir-values/values/lamports_mir_value.h
         mir-values/values/system_program_check_id_mir_value.h
+        mir-values/values/account_info_assign_mir_value.h
 )
 
 target_link_libraries(SolanaVerifier
