Support split at

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -177,6 +177,7 @@ add_executable(SolanaVerifier
         mir-values/values/system_program_check_id_mir_value.h
         mir-values/values/account_info_assign_mir_value.h
         mir-values/values/account_info_realloc_mir_value.h
+        mir-values/values/split_at_mir_value.h
 )
 
 target_link_libraries(SolanaVerifier
