Support to string

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -182,6 +182,7 @@ add_executable(SolanaVerifier
         mir-values/values/pubkey_from_bytes_mir_value.h
         mir-values/values/result_is_ok_mir_value.h
         mir-values/values/drop_mir_value.h
+        mir-values/values/as_string_mir_value.h
 )
 
 target_link_libraries(SolanaVerifier
