--- a/tests/official/level4/contract/Cargo.toml
+++ b/tests/official/level4/contract/Cargo.toml
@@ -8,6 +8,7 @@ solana-program = "1.7.17"
 vendored-spl-token = { path = "vendored-spl-token-3.1.0", features = ["no-entrypoint"] }
 borsh = "0.9.1"
 borsh-derive = "0.9.1"
+proc-macro2 = "=1.0.79"
 
 [lib]
 crate-type = ["cdylib", "lib"]
