--- a/tests/official/repository-layout/contract/Cargo.toml
+++ b/tests/official/repository-layout/contract/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 borsh = "0.9.3"
 borsh-derive = "0.9.1"
 solana-program = "1.16.10"
+proc-macro2 = "=1.0.79"
 
 [lib]
 crate-type = ["cdylib", "lib"]
